external-crates/move/crates/move-compiler/tests/move_check/ide_mode/dot_incomplete.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
   ┌─ tests/move_check/ide_mode/dot_incomplete.move:13:23
   │
13 │         let _tmp1 = s.;                // incomplete with `;` (next line should parse)
   │                       ^
   │                       │
   │                       Unexpected ';'
   │                       Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_check/ide_mode/dot_incomplete.move:14:37
   │
14 │         let _tmp2 = s.another_field.;  // incomplete with `;` (next line should parse)
   │                                     ^
   │                                     │
   │                                     Unexpected ';'
   │                                     Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_check/ide_mode/dot_incomplete.move:16:9
   │
16 │         let _tmp4 = s;
   │         ^^^
   │         │
   │         Unexpected 'let'
   │         Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_check/ide_mode/dot_incomplete.move:18:5
   │
18 │     }
   │     ^
   │     │
   │     Unexpected '}'
   │     Expected an identifier or a decimal number
